# Hand-eye-Calibration

Robot_control/: CMakeLists.txt  Makefile  Plugin.cpp  Plugin.cpp.autosave  Plugin.hpp  README.md
Robot_control/workcell/: .~lock.Extrinsics_WithTouch.csv#  .~lock.Extrinsics_WithoutTouch.csv#  Extrinsics_WithTouch.csv  Extrinsics_WithoutTouch.csv  Extrinsics_WithoutTouch.ods  Global_RMSE.txt  Global_poses.txt  Images_with_rotation.txt  Local_RMSE.txt  Local_poses.txt  RobWorkStudio.ini  Robot_poses.txt  Scene.wc.xml  assimp_log.txt  example1.csv  m.pcd  m1.pcd  m2.pcd  rwsettings.xml  test (copy).txt  test.txt  test1.txt  test2.txt  test_new.txt  test_u.txt  untitled.ply
Robot_control/workcell/old_Material/: test (copy).txt  test2.txt  test_RPY.txt  test_TCP.txt  test_to_forum.txt  test_try.txt
Test_program/: CMakeLists.txt  main.cpp  main.cpp.autosave
Test_program/src/: adv_camera_calibration.cpp  camera_calibration.cpp  hand_eye_calibration.cpp  hand_eye_calibration_without_all_cout.cpp  hand_eye_test.cpp  main.cpp  parsing_tcp_data.cpp  pcl_test.cpp  pcl_test.cpp.autosave  test_1  ur_robot_rtde_test.cpp
